// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`不分组数据渲染 1`] = `
<ul
  className="sc-bdvvtL kCeUpj sc-iCfMLu dSzGXf sinoui-auto-complete__option-list sinoui-list"
  onKeyDown={[Function]}
>
  <li
    className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="sc-dkPtRN iNwqXs sinoui-list-item-text"
    >
      The Shawshank Redemption
    </div>
  </li>
  <li
    className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="sc-dkPtRN iNwqXs sinoui-list-item-text"
    >
      The Godfather
    </div>
  </li>
  <li
    className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="sc-dkPtRN iNwqXs sinoui-list-item-text"
    >
      The Godfather: Part II
    </div>
  </li>
  <li
    className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="sc-dkPtRN iNwqXs sinoui-list-item-text"
    >
      The Dark Knight
    </div>
  </li>
</ul>
`;

exports[`分组渲染 1`] = `
<ul
  className="sc-bdvvtL kCeUpj sc-iCfMLu dSzGXf sinoui-auto-complete__option-list sinoui-list"
  onKeyDown={[Function]}
>
  <li
    className="sc-gsDKAQ jMsphT sinoui-list-item sinoui-list-item--disabled-ripple sc-furwcr gnoXyO"
    tabIndex={0}
  >
    <div
      className="sc-jrQzAO gvyiRI"
    >
      0-9
    </div>
    <ul
      className="sc-bdvvtL kCeUpj sc-pVTFL kGJuFb sinoui-list"
      onKeyDown={[Function]}
    >
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          12 Angry Men
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          2001: A Space Odyssey
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          3 Idiots
        </div>
      </li>
    </ul>
  </li>
  <li
    className="sc-gsDKAQ jMsphT sinoui-list-item sinoui-list-item--disabled-ripple sc-furwcr gnoXyO"
    tabIndex={0}
  >
    <div
      className="sc-jrQzAO gvyiRI"
    >
      A
    </div>
    <ul
      className="sc-bdvvtL kCeUpj sc-pVTFL kGJuFb sinoui-list"
      onKeyDown={[Function]}
    >
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          American History X
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          Apocalypse Now
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          Alien
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          American Beauty
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          Aliens
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          Amélie
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          A Clockwork Orange
        </div>
      </li>
      <li
        className="sc-gsDKAQ jMsphT sinoui-list-item sc-crHmcD jgHYBA"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-dkPtRN iNwqXs sinoui-list-item-text"
        >
          Amadeus
        </div>
      </li>
    </ul>
  </li>
</ul>
`;
